# mdb-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  models.rs  tmdb_client.rs
src/models/: movie.rs  search.rs
src/models/common/: company.rs  country.rs  genre.rs  language.rs  mod.rs
src/models/movie/: collection.rs  movie.rs
src/models/search/: movie_search.rs  search.rs  tv_search.rs
src/models/tv/: creator.rs  episode.rs  mod.rs  network.rs  season.rs  tv.rs
