[package]
name = "tmdb"
version = "1.0.0-b.1"
authors = ["Mohammadreza Amini <mohammadreza99a@yahoo.com>"]
edition = "2018"
description = "Command line app to interact with TMDB (The Movie DataBase)"
license = "MIT"
keywords= ["tmdb", "movie", "tv", "database"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [".env"]
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
anyhow = "1.0"
comfy-table = "2.1.0"
tui = "0.14"
termion = "1.5"
term_size = "0.3.0"
clap = "3.0.0-beta.2"
